<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.blogspot.gihanmora.childbicycletrackingsystem.Main_Menu"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical" >

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.blogspot.gihanmora.childbicycletrackingsystem.SetLocation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                style="@style/CardStyle.Home"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adjust_child_playing_area"
                        android:textAppearance="@style/TextStyle.Title"/>

                    <TextView
                        android:id="@+id/radius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_spacing_medium"
                        android:text="@string/km_sample"
                        android:textAppearance="@style/TextStyle.Body2"/>
                    <SeekBar
                        android:id="@+id/seekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_spacing_small"/>

                    <Button
                        android:id="@+id/setlocationbtn"
                        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/holo_green_light"
                        android:text="@string/set"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_dark"
                        android:textSize="20sp" />
                    <Button
                        android:id="@+id/SpeedIndicator"
                        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/material_blue_400"
                        android:text="BicycleSpeed"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_dark"
                        android:textSize="20sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Teal">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.Teal"
            android:title="Select Location"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_map__menu" />

</android.support.design.widget.CoordinatorLayout>



